# user-group-psp-policy

./: .gitignore  Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  hub.yml  metadata.yml  questions-ui.yml
.github/workflows/: release.yml  release.yml.template  test.yml
src/: error.rs  lib.rs  settings.rs
test_data/: cronjob_root_user.json  cronjob_with_no_securitycontext.json  daemonset_root_user.json  daemonset_with_no_securitycontext.json  deployment_root_user.json  deployment_with_no_securitycontext.json  deployment_with_user.json  job_root_user.json  job_with_no_securitycontext.json  pod_creation_invalid_supplemental_group.json  pod_creation_must_run_as_with_group_id.json  pod_creation_must_run_as_with_init_container_invalid_user_id.json  pod_creation_must_run_as_with_invalid_group_id.json  pod_creation_must_run_as_with_invalid_user_id.json  pod_creation_must_run_as_with_invalid_value.json  pod_creation_must_run_as_with_no_init_container_user_id.json  pod_creation_must_run_as_with_no_value.json  pod_creation_must_run_as_with_user_id.json  pod_creation_must_run_as_with_user_id_wrong_podsecuritycontext.json  pod_creation_run_as_non_root_is_false.json  pod_creation_valid_supplemental_group.json  pod_creation_zero_user_id.json  replicaset_root_user.json  replicaset_with_no_securitycontext.json  replicationcontroller_root_user.json  replicationcontroller_with_no_securitycontext.json  statefulset_root_user.json  statefulset_with_no_securitycontext.json
test_data/e2e/: empty_security_context_pod.json  invalid_container_image_user_id.json  invalid_group_id.json  invalid_supplemental_group_.json  invalid_user_id.json  pod_user_150.json  settings_invalid_container_image_verification.json  settings_may_run_as.json  settings_must_run_as.json  settings_must_run_as_100_200.json  settings_must_run_as_container_image_group_validation.json  settings_must_run_as_container_image_user_validation.json  settings_must_run_as_non_root.json  settings_must_run_as_non_root_validate_only.json  settings_must_run_as_overwrite.json  (+6 more)
