[package]
name = "user-group-psp"
version = "0.6.2"
authors = [
  "Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
kubewarden-policy-sdk = "0.11.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
anyhow = "1.0"
oci-spec = "0.7.0"

[dev-dependencies]
jsonpath_lib = "0.3.0"
rstest = "0.24.0"
