[package]
name = "user-group-psp"
version = "1.0.2"
authors = [
  "Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kubewarden-policy-sdk = "0.13.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
anyhow = "1.0"
oci-spec = "0.8"

[dev-dependencies]
jsonpath_lib = "0.3.0"
rstest = "0.25.0"
